@@ -2216,6 +2216,27 @@ Precondition:
 Parameter ``pres``:
     a new presentation of the fundamental group of this triangulation.)doc";
 
+// Docstring regina::python::doc::detail::TriangulationBase_::sig
+constexpr const char *sig =
+R"doc(Alias for isoSig(), which constructs the isomorphism signature of the
+given type for this triangulation.
+
+This alias sig() is provided to assist with generic code that can work
+with both triangulations and links.
+
+See isoSig() for further details.
+
+Python:
+    This alias is only available for the default signature type and
+    encoding (i.e., the default C++ template arguments). If you wish
+    to use a different signature type and/or encoding, you can instead
+    use the variants provided with isoSig(); that is, you can call a
+    function of the form isoSig_*Type*. See the isoSig() documentation
+    for further details.
+
+Returns:
+    the isomorphism signature of this triangulation.)doc";
+
 // Docstring regina::python::doc::detail::TriangulationBase_::simplex
 constexpr const char *simplex =
 R"doc(Returns the top-dimensional simplex at the given index in the
